--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
      "require": {
         "php": ">=5.3.3",
         "symfony/filesystem": "dev-master",
-        "splot/foundation": "dev-master",
+        "michaldudek/foundation": "dev-master",
         "splot/framework": "dev-master"
     },
     "autoload": {
