--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,15 @@
      "require": {
         "php": ">=5.3.3",
         "michaldudek/foundation": "dev-master",
-        "splot/framework": ">=0.6"
+        "splot/framework": ">=0.6",
+        "kriswallsmith/assetic": "1.2.*@dev",
+        "natxet/CssMin": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*"
+    },
+    "suggest": {
+        "patchwork/jsqueeze": "SplotAssetsModule integrates with JSqueeze JavaScript minifier"
     },
     "extra": {
         "branch-alias": {
