--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
      "require": {
         "php": ">=5.3.3",
         "michaldudek/foundation": ">0.9,<2.0",
-        "splot/framework": ">=0.6",
+        "splot/framework": ">=0.6,<0.9",
         "kriswallsmith/assetic": "1.2.*@dev",
         "natxet/CssMin": "dev-master"
     },
@@ -24,7 +24,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "0.6.x-dev"
+            "dev-release/0.6-alpha": "0.6.x-dev"
         }
     },
     "minimum-stability": "dev",
