--- a/composer.json
+++ b/composer.json
@@ -5,33 +5,37 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Michał Dudek",
+            "name": "Michał Pałys-Dudek",
             "email": "michal@michaldudek.pl"
         }
     ],
      "require": {
         "php": ">=5.3.3",
         "michaldudek/foundation": ">0.9,<2.0",
-        "splot/framework": ">=0.6",
-        "kriswallsmith/assetic": "1.2.*@dev",
-        "natxet/CssMin": "dev-master"
+        "splot/framework": ">=0.8,<2.0",
+        "kriswallsmith/assetic": "~1.2.0",
+        "natxet/CssMin": "~3.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "3.7.*"
+        "phpunit/phpunit": "~4.0"
     },
     "suggest": {
         "patchwork/jsqueeze": "SplotAssetsModule integrates with JSqueeze JavaScript minifier"
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "0.6.x-dev"
+            "dev-master": "0.9.x-dev"
         }
     },
     "minimum-stability": "dev",
     "autoload": {
-    	"psr-0": { 
-            "Splot\\AssetsModule\\Tests": "tests/",
-            "Splot\\AssetsModule": "src/"
+    	"psr-4": { 
+            "Splot\\AssetsModule\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Splot\\AssetsModule\\Tests\\": "tests/"
         }
     }
 }
